[gd_scene load_steps=5 format=3 uid="uid://tw1x211qow0p"]

[ext_resource type="Script" path="res://src/tests/play_ground/play_ground.gd" id="1_tj58r"]
[ext_resource type="PackedScene" uid="uid://bkfkjsv3f5y8p" path="res://src/match_simulator/visual_match/visual_actors/visual_field/visual_field.tscn" id="2_4fv7e"]
[ext_resource type="PackedScene" uid="uid://brmxp0ulenogn" path="res://src/match_simulator/visual_match/visual_actors/visual_ball/visual_ball.tscn" id="3_x2vyy"]
[ext_resource type="PackedScene" uid="uid://doptire10wp2v" path="res://src/match_simulator/visual_match/visual_actors/visual_player/visual_player.tscn" id="4_3mb3o"]

[node name="PlayGround" type="Node2D"]
script = ExtResource("1_tj58r")

[node name="VisualField" parent="." instance=ExtResource("2_4fv7e")]

[node name="VisualBall" parent="." instance=ExtResource("3_x2vyy")]

[node name="VisualPlayer" parent="." instance=ExtResource("4_3mb3o")]
